--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,15 @@
     <artifactId>validation-api</artifactId>
     <version>2.0.1.Final</version> <!-- Проверьте актуальность версии -->
 </dependency>
+<dependency>
+ <groupId>org.springframework.boot</groupId>
+ <artifactId>spring-boot-starter-jdbc</artifactId>
+</dependency>
+<dependency>
+ <groupId>com.h2database</groupId>
+ <artifactId>h2</artifactId>
+ <scope>runtime</scope>
+</dependency>
 	</dependencies>
 
 	<build>
